--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-spring.application.name=employee
 spring.datasource.url=jdbc:postgresql://localhost:5432/employee
 spring.datasource.username=admin
-spring.datasource.password=admin
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
